test/bad/generics/call01.px

func f<T>(x: T, y: T) def
    return

f(0, '0')
